<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".view.MainFragment">

    <ProgressBar
        android:id="@+id/progressBarcv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleX="0.10"
        android:scaleY="0.10"
        android:textColor="@android:color/holo_blue_bright"
        android:visibility="visible" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/now_playing_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/now_playing_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/now_playing"
                    android:paddingStart="@dimen/main_fragment_padding"
                    android:paddingTop="@dimen/main_fragment_padding"
                    android:textSize="@dimen/header_main_text_size" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/now_playing_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/popular_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/popular_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:paddingStart="@dimen/main_fragment_padding"
                    android:paddingTop="@dimen/main_fragment_padding"
                    android:textSize="@dimen/header_main_text_size" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/top_rated_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/top_rated_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_rated"
                    android:paddingStart="@dimen/main_fragment_padding"
                    android:paddingTop="@dimen/main_fragment_padding"
                    android:textSize="@dimen/header_main_text_size" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/top_rated_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/upcoming_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/upcoming_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming"
                    android:paddingStart="@dimen/main_fragment_padding"
                    android:paddingTop="@dimen/main_fragment_padding"
                    android:textSize="@dimen/header_main_text_size" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upcoming_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal" />


            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>